--- a/k8s/kafka-zk-statefulset.yaml
+++ b/k8s/kafka-zk-statefulset.yaml
@@ -33,22 +33,18 @@ spec:
     spec:
       securityContext:
         fsGroup: 1000
-        runAsUser: 1000
-        runAsGroup: 1000
       initContainers:
       - name: volume-permissions
         image: busybox
+        securityContext:
+          runAsUser: 0
+          runAsGroup: 0
         command:
         - sh
         - -c
         - |
-          # Create directories if they don't exist
-          mkdir -p /var/lib/zookeeper/data /var/lib/zookeeper/log
-          # Set permissions only on mounted directories
-          chown -R 1000:1000 /var/lib/zookeeper/data
-          chown -R 1000:1000 /var/lib/zookeeper/log
-          chmod -R 755 /var/lib/zookeeper/data
-          chmod -R 755 /var/lib/zookeeper/log
+          echo "Setting up permissions..."
+          chown -R 1000:1000 /var/lib/zookeeper/data /var/lib/zookeeper/log
         volumeMounts:
         - name: data
           mountPath: /var/lib/zookeeper/data
@@ -143,20 +139,18 @@ spec:
     spec:
       securityContext:
         fsGroup: 1001
-        runAsUser: 1001
-        runAsGroup: 1001
       initContainers:
       - name: volume-permissions
         image: busybox
+        securityContext:
+          runAsUser: 0
+          runAsGroup: 0
         command:
         - sh
         - -c
         - |
-          # Create directory if it doesn't exist
-          mkdir -p /bitnami/kafka
-          # Set permissions only on mounted directory
+          echo "Setting up permissions..."
           chown -R 1001:1001 /bitnami/kafka
-          chmod -R 755 /bitnami/kafka
         volumeMounts:
         - name: data
           mountPath: /bitnami/kafka
