--- a/k8s/kafka-zk-statefulset.yaml
+++ b/k8s/kafka-zk-statefulset.yaml
@@ -38,18 +38,15 @@ spec:
         image: busybox
         securityContext:
           runAsUser: 0
-          runAsGroup: 0
         command:
         - sh
         - -c
         - |
-          echo "Setting up permissions..."
-          chown -R 1000:1000 /var/lib/zookeeper/data /var/lib/zookeeper/log
+          echo "Setting up Zookeeper permissions..."
+          chown -R 1000:1000 /var/lib/zookeeper/data
         volumeMounts:
         - name: data
           mountPath: /var/lib/zookeeper/data
-        - name: log
-          mountPath: /var/lib/zookeeper/log
       containers:
       - name: zookeeper
         image: confluentinc/cp-zookeeper:7.3.2
@@ -91,8 +88,6 @@ spec:
         volumeMounts:
         - name: data
           mountPath: /var/lib/zookeeper/data
-        - name: log
-          mountPath: /var/lib/zookeeper/log
         - name: secrets
           mountPath: /etc/kafka/secrets
       volumes:
@@ -144,12 +139,11 @@ spec:
         image: busybox
         securityContext:
           runAsUser: 0
-          runAsGroup: 0
         command:
         - sh
         - -c
         - |
-          echo "Setting up permissions..."
+          echo "Setting up Kafka permissions..."
           chown -R 1001:1001 /bitnami/kafka
         volumeMounts:
         - name: data
