--- a/k8s/kafka-zk-statefulset.yaml
+++ b/k8s/kafka-zk-statefulset.yaml
@@ -75,7 +75,7 @@ spec:
         - name: ZOOKEEPER_SERVER_ID
           value: "1"
         - name: ZOOKEEPER_SERVERS
-          value: "zookeeper:2888:3888"
+          value: "zookeeper-0.zookeeper.global-city-streaming.svc.cluster.local:2888:3888"
         - name: KAFKA_OPTS
           value: "-Djava.security.auth.login.config=/etc/kafka/secrets/zookeeper_jaas.conf"
         resources:
@@ -148,6 +148,24 @@ spec:
         volumeMounts:
         - name: data
           mountPath: /bitnami/kafka
+      - name: init-config
+        image: busybox
+        command:
+        - sh
+        - -c
+        - |
+          echo "Creating JAAS config..."
+          mkdir -p /etc/kafka/secrets
+          cat > /etc/kafka/secrets/zookeeper_jaas.conf << EOF
+          Server {
+              org.apache.kafka.common.security.plain.PlainLoginModule required
+              username="admin"
+              password="admin-secret";
+          };
+          EOF
+        volumeMounts:
+        - name: secrets
+          mountPath: /etc/kafka/secrets
       containers:
       - name: kafka
         image: bitnami/kafka:3.5
@@ -163,11 +181,11 @@ spec:
         - name: KAFKA_CFG_BROKER_ID
           value: "1"
         - name: KAFKA_CFG_ZOOKEEPER_CONNECT
-          value: "zookeeper:2181"
+          value: "zookeeper-0.zookeeper.global-city-streaming.svc.cluster.local:2181"
         - name: KAFKA_CFG_LISTENERS
           value: "PLAINTEXT://:9092"
         - name: KAFKA_CFG_ADVERTISED_LISTENERS
-          value: "PLAINTEXT://kafka:9092"
+          value: "PLAINTEXT://kafka-0.kafka.global-city-streaming.svc.cluster.local:9092"
         - name: KAFKA_CFG_NUM_PARTITIONS
           value: "3"
         - name: KAFKA_CFG_DEFAULT_REPLICATION_FACTOR
@@ -186,6 +204,8 @@ spec:
         volumeMounts:
         - name: data
           mountPath: /bitnami/kafka
+        - name: secrets
+          mountPath: /etc/kafka/secrets
       volumes:
       - name: secrets
         emptyDir: {}
