--- a/kafka-producer/Dockerfile
+++ b/kafka-producer/Dockerfile
@@ -1,3 +1,4 @@
+# syntax=docker/dockerfile:1.4
 FROM python:3.8-slim
 
 # Install curl for healthcheck
@@ -9,11 +10,14 @@ RUN set -ex; \
     pip install --no-cache-dir -r requirements.txt
 
 # Set up working directory first
-WORKDIR /app/kafka-producer
+WORKDIR /app
 
 # Copy files to specific locations
 COPY wait-for-it.sh /usr/local/bin/
-COPY python-producer.py /app/
+COPY python-producer.py .
+
+# Copy shared directory from the shared context
+COPY --from=shared . /app/shared/
 
 # Fix line endings and make script executable
 RUN sed -i 's/\r$//' /usr/local/bin/wait-for-it.sh && \
