--- a/k8s/shared-files-configmap.yaml
+++ b/k8s/shared-files-configmap.yaml
@@ -39,11 +39,11 @@ data:
         """Validate that the city data contains all required fields."""
         required_fields = ['city', 'country', 'temperature', 'timestamp']
         return all(field in data for field in required_fields)
-  weather/__init__.py: |
+  weather.__init__.py: |
     from .api import WeatherAPI
 
     __all__ = ['WeatherAPI']
-  weather/api.py: |
+  weather.api.py: |
     import os
     import requests
     import sys
@@ -146,7 +146,7 @@ data:
             except Exception as e:
                 print(f"Error composing city object for {city}: {str(e)}", file=sys.stderr)
                 return None
-  monitoring/exec-settings.txt: |
+  monitoring.exec-settings.txt: |
     -- -- - EXECUTION SETTINGS AND METRICS - -- -- 
 
     KAFKA PRODUCER METRICS:
