--- a/k8s/city-api-deployment.yaml
+++ b/k8s/city-api-deployment.yaml
@@ -15,10 +15,12 @@ spec:
     spec:
       containers:
       - name: city-api
-        image: city-api:latest
-        imagePullPolicy: Never
+        image: joel030303/city-api:latest
+        imagePullPolicy: Always
         command: ["uvicorn"]
-        args: ["main:app", "--host", "0.0.0.0", "--port", "8000"]
+        args: ["city-api.main:app", "--host", "0.0.0.0", "--port", "8003"]
+        ports:
+        - containerPort: 8003
         resources:
           requests:
             cpu: 100m
@@ -29,11 +31,13 @@ spec:
         env:
         - name: PYTHONPATH
           value: "/app"
+        - name: PORT
+          value: "8003"
         - name: KAFKA_BOOTSTRAP_SERVERS
           value: "kafka-0.kafka.global-city-streaming.svc.cluster.local:9092"
         volumeMounts:
         - name: app-code
-          mountPath: /app
+          mountPath: /app/city-api
       volumes:
       - name: app-code
         configMap:
