--- a/k8s/kafka-producer-deployment.yaml
+++ b/k8s/kafka-producer-deployment.yaml
@@ -66,11 +66,11 @@ spec:
           mountPath: /app/shared
         resources:
           limits:
-            cpu: "2"
-            memory: "5Gi"
+            cpu: "500m"
+            memory: "1Gi"
           requests:
-            cpu: "1"
-            memory: "2Gi"
+            cpu: "250m"
+            memory: "512Mi"
       volumes:
       - name: config-volume
         configMap:
