Add shared files to configmap mount

--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -62,10 +62,18 @@ spec:
             secretKeyRef:
               name: api-keys
               key: weather-api-key
+        volumeMounts:
+        - name: shared-files
+          mountPath: /app/shared/weather
+          subPath: weather
         resources:
           limits:
             memory: "256Mi"
             cpu: "500m"
           requests:
             memory: "128Mi"
-            cpu: "250m" 
+            cpu: "250m"
+      volumes:
+      - name: shared-files
+        configMap:
+          name: shared-files 
