--- a/k8s/shared-files-configmap.yaml
+++ b/k8s/shared-files-configmap.yaml
@@ -166,3 +166,88 @@ data:
     - Actual Insertion Rate: 100.00 records/second (matches input rate from Kafka)
 
     Note: All rates are theoretical maximums under ideal conditions. Actual rates may vary due to network latency, processing overhead, and system factors. 
+
+  "weather/api.py": |
+    import os
+    import requests
+    import sys
+    import aiohttp
+    import asyncio
+    from typing import Optional, Dict, Any, List
+
+    class WeatherAPI:
+        def __init__(self):
+            self.api_key = os.environ.get('WEATHER_API_KEY')
+            self.api_url = "https://api.weatherapi.com/v1/current.json"
+            self.batch_enabled = False  # Default to sequential processing
+            
+            if not self.api_key:
+                raise ValueError("WEATHER_API_KEY environment variable not set")
+
+        def fetch_city_data(self, city: str) -> Optional[Dict[str, Any]]:
+            try:
+                query = {'key': self.api_key, 'q': city, 'aqi': 'yes'}
+                response = requests.get(self.api_url, params=query)
+                
+                if not response.ok:
+                    print(f"Error: Weather API request failed with status {response.status_code}", file=sys.stderr)
+                    return None
+                    
+                data = response.json()
+                result = self._compose_city_object(data, city)
+                return result
+                
+            except Exception as e:
+                print(f"Error fetching data for {city}: {str(e)}", file=sys.stderr)
+                return None
+
+        def _compose_city_object(self, api_response: Dict[str, Any], city: str) -> Dict[str, Any]:
+            try:
+                lat = api_response['location']['lat']
+                lon = api_response['location']['lon']
+                
+                result = {
+                    'city': city,
+                    'country': api_response['location']['country'],
+                    'continent': api_response['location']['tz_id'].split("/")[0],
+                    'temperatureCelsius': api_response['current']['temp_c'],
+                    'latitude': lat,
+                    'longitude': lon
+                }
+                return result
+            except Exception as e:
+                print(f"Error composing city object for {city}: {str(e)}", file=sys.stderr)
+                return None
+
+  "weather/city_coordinates.py": |
+    #!/usr/bin/env python3
+    import sys
+    import json
+    import os
+    from api import WeatherAPI
+
+    def get_city_coordinates(cities):
+        weather_api = WeatherAPI()
+        weather_api.batch_enabled = True
+        
+        print(f"Fetching data for {len(cities)} cities", file=sys.stderr)
+        
+        city_data = {}
+        
+        print("Fetching data for each city individually", file=sys.stderr)
+        for city in cities:
+            data = weather_api.fetch_city_data(city)
+            if data:
+                city_data[city] = data
+                print(f"Added coordinates for {city}", file=sys.stderr)
+        
+        print(json.dumps(city_data))
+        return city_data
+
+    if __name__ == "__main__":
+        if len(sys.argv) < 2:
+            print(json.dumps({"error": "No cities provided"}))
+            sys.exit(1)
+        
+        cities = sys.argv[1:]
+        get_city_coordinates(cities) 
