--- a/k8s/city-api-deployment.yaml
+++ b/k8s/city-api-deployment.yaml
@@ -40,12 +40,20 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: WEATHER_API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: api-keys
+              key: weather-api-key
         volumeMounts:
         - name: app-code
           mountPath: /app/city-api
         - name: app-config
           mountPath: /app/configuration.yml
           subPath: configuration.yml
+        - name: shared-files
+          mountPath: /app/shared/weather
+          subPath: weather
       volumes:
       - name: app-code
         configMap:
@@ -53,3 +61,6 @@ spec:
       - name: app-config
         configMap:
           name: app-config-yml
+      - name: shared-files
+        configMap:
+          name: shared-files
