--- a/k8s/shared-files-configmap.yaml
+++ b/k8s/shared-files-configmap.yaml
@@ -224,7 +224,16 @@ data:
     import sys
     import json
     import os
-    from api import WeatherAPI
+    import importlib.util
+    import pathlib
+
+    # Dynamically import the api module from the same directory
+    current_dir = pathlib.Path(__file__).parent
+    api_path = current_dir / "api.py"
+    spec = importlib.util.spec_from_file_location("api", api_path)
+    api = importlib.util.module_from_spec(spec)
+    spec.loader.exec_module(api)
+    WeatherAPI = api.WeatherAPI
 
     def get_city_coordinates(cities):
         weather_api = WeatherAPI()
