Update configmap paths for weather apis

--- a/k8s/shared-files-configmap.yaml
+++ b/k8s/shared-files-configmap.yaml
@@ -146,80 +146,7 @@ data:
             except Exception as e:
                 print(f"Error composing city object for {city}: {str(e)}", file=sys.stderr)
                 return None
-  monitoring.exec-settings.txt: |
-    -- -- - EXECUTION SETTINGS AND METRICS - -- -- 
-
-    KAFKA PRODUCER METRICS:
-    - Total Cities Processed: 89 (84 static + 5 dynamic)
-    - Request Interval: 0.01 seconds
-    - Messages per Second: 100.00 (89 cities / 0.89 seconds cycle)
-
-    FLINK PROCESSOR METRICS:
-    - Batch Size: 300 records
-    - Batch Interval: 200ms
-    - Maximum Theoretical Processing Rate: 1500.00 records/second
-    - Actual Processing Rate: 100.00 records/second (limited by producer rate)
-    - Sample Duration: 5 seconds
-    - Max Retries: 5
-
-    POSTGRES DATABASE:
-    - Actual Insertion Rate: 100.00 records/second (matches input rate from Kafka)
-
-    Note: All rates are theoretical maximums under ideal conditions. Actual rates may vary due to network latency, processing overhead, and system factors. 
-
-  "weather/api.py": |
-    import os
-    import requests
-    import sys
-    import aiohttp
-    import asyncio
-    from typing import Optional, Dict, Any, List
-
-    class WeatherAPI:
-        def __init__(self):
-            self.api_key = os.environ.get('WEATHER_API_KEY')
-            self.api_url = "https://api.weatherapi.com/v1/current.json"
-            self.batch_enabled = False  # Default to sequential processing
-            
-            if not self.api_key:
-                raise ValueError("WEATHER_API_KEY environment variable not set")
-
-        def fetch_city_data(self, city: str) -> Optional[Dict[str, Any]]:
-            try:
-                query = {'key': self.api_key, 'q': city, 'aqi': 'yes'}
-                response = requests.get(self.api_url, params=query)
-                
-                if not response.ok:
-                    print(f"Error: Weather API request failed with status {response.status_code}", file=sys.stderr)
-                    return None
-                    
-                data = response.json()
-                result = self._compose_city_object(data, city)
-                return result
-                
-            except Exception as e:
-                print(f"Error fetching data for {city}: {str(e)}", file=sys.stderr)
-                return None
-
-        def _compose_city_object(self, api_response: Dict[str, Any], city: str) -> Dict[str, Any]:
-            try:
-                lat = api_response['location']['lat']
-                lon = api_response['location']['lon']
-                
-                result = {
-                    'city': city,
-                    'country': api_response['location']['country'],
-                    'continent': api_response['location']['tz_id'].split("/")[0],
-                    'temperatureCelsius': api_response['current']['temp_c'],
-                    'latitude': lat,
-                    'longitude': lon
-                }
-                return result
-            except Exception as e:
-                print(f"Error composing city object for {city}: {str(e)}", file=sys.stderr)
-                return None
-
-  "weather/city_coordinates.py": |
+  weather.city_coordinates.py: |
     #!/usr/bin/env python3
     import sys
     import json
